chat page complete

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/*#root{
-	display: flex;
-	flex-direction: col;
-	align-items: stretch;
-	height: 100vh;
-	width: 100vw;
-}*/
+html{
+	overflow-y: hidden;
+}
